[gd_scene load_steps=5 format=3 uid="uid://dypqama8wixgp"]

[ext_resource type="Script" path="res://scripts/combat/character_container.gd" id="1_vbnqj"]
[ext_resource type="PackedScene" path="res://vfx/target_highlight/ally_target_fx.tscn" id="2_dd4sg"]
[ext_resource type="PackedScene" uid="uid://dedijqnpjre4k" path="res://scenes/card_display/character_card_3d.tscn" id="2_dm1yn"]
[ext_resource type="PackedScene" path="res://vfx/target_highlight/enemy_target_fx.tscn" id="3_orwev"]

[node name="CharacterContainer" type="Node3D"]
script = ExtResource("1_vbnqj")
player_character_targetable_fx = ExtResource("2_dd4sg")
opponent_character_targetable_fx = ExtResource("3_orwev")

[node name="PlayerCharacters" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.5, 0)

[node name="PlayerCharacter1" parent="PlayerCharacters" instance=ExtResource("2_dm1yn")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -5.5, 0, 0)
is_combat_display = true

[node name="PlayerCharacter2" parent="PlayerCharacters" instance=ExtResource("2_dm1yn")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
is_combat_display = true

[node name="PlayerCharacter3" parent="PlayerCharacters" instance=ExtResource("2_dm1yn")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 5.5, 0, 0)
is_combat_display = true

[node name="OpponentCharacters" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0)

[node name="OpponentCharacter1" parent="OpponentCharacters" instance=ExtResource("2_dm1yn")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -5.5, 0, 0)
is_combat_display = true

[node name="OpponentCharacter2" parent="OpponentCharacters" instance=ExtResource("2_dm1yn")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
is_combat_display = true

[node name="OpponentCharacter3" parent="OpponentCharacters" instance=ExtResource("2_dm1yn")]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 5.5, 0, 0)
is_combat_display = true

[node name="InfoPopupContainer" type="CanvasLayer" parent="."]
